added styling and fixed login route

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} Local Resource Hub {% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    
+    {% block head %}
+      
+    {% endblock head %}
+      
   </head>
   <body>
     <header>
@@ -15,7 +20,7 @@
           {% if user.is_authenticated%}
           <form id="logout-form" method="post" action="{% url 'logout' %}">
             {% csrf_token %}
-            <button type="submit">Log out</button>
+            <button type="submit" id="btn-logout">Log out</button>
           </form>
           {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
