--- a/resources/templates/resources/resource_list.html
+++ b/resources/templates/resources/resource_list.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/resources/resource_list.css' %}">
+{% endblock head %}
+  
 
 {% block title %}
     Resources
