--- a/resources/templates/registration/login.html
+++ b/resources/templates/registration/login.html
@@ -1,17 +1,25 @@
 {% extends "base.html" %}
+{% load static %}
 
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/registration/registration.css' %}">
+{% endblock head %}
+  
 {% block title %}Login{% endblock title %}
 
 {% block content %}
-<h2>Login</h2>
-<form action="" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+<main>
+    <h2>Login</h2>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+    </form>
 
-{% if form.non_field_errors %}
-    <div class="error">{{ form.non_field_errors }}</div>
-{% endif %}
-<p>Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
+    {% if form.non_field_errors %}
+        <div class="error">{{ form.non_field_errors }}</div>
+    {% endif %}
+    
+    <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+</main>
 {% endblock content %}
