--- a/resources/templates/resources/register.html
+++ b/resources/templates/resources/register.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static 'css/resources/register.css' %}">
+{% endblock head %}
+
 {% block title %}
   Register
 {% endblock title %}
