--- a/resources/static/css/resources/resource_list.css
+++ b/resources/static/css/resources/resource_list.css
@@ -1,4 +1,6 @@
-body, h2, table {
+body,
+h2,
+table {
   margin: 0;
   padding: 0;
 }
@@ -17,14 +19,15 @@ h2 {
 }
 
 table {
-  width: 100%; 
+  width: 100%;
   margin: 20px auto;
   border-collapse: collapse;
   background: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-th, td {
+th,
+td {
   padding: 12px 15px;
   text-align: left;
   white-space: normal;
@@ -64,12 +67,48 @@ a.add-resource:hover {
   background-color: #218838;
 }
 
+form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+form input[type="text"] {
+  padding: 10px;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+  font-size: 1em;
+}
+
+form button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+  margin-left: 10px;
+}
+
+form button:hover {
+  background-color: #0056b3;
+}
+
 @media (max-width: 768px) {
   table {
     font-size: 14px;
   }
 
-  th, td {
+  th,
+  td {
     padding: 8px;
+  }
+
+  form input[type="text"] {
+    width: 100%;
+    margin-right: 0;
   }
 }
